<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_select_effect"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SelectEffectActivity">
    <TextView
        android:textSize="18sp"
        android:layout_margin="8dp"
        android:text="@string/selectEffectForLongtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <RadioGroup
        android:id="@+id/rg_effect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rb_effect_leftmove"
            android:text="@string/leftMove"
            android:textSize="18sp"
            android:padding="8dp"
            android:background="@drawable/recycler_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/rb_effect_leftandrRight"
            android:text="@string/leftAndRight"
            android:textSize="18sp"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/recycler_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RadioGroup>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="18sp"
            android:layout_margin="8dp"
            android:text="@string/selectMoveSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_margin="8dp"
            android:id="@+id/tv_progress"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <SeekBar
        android:id="@+id/sb_effect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
