<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AboutActivity">

    <ImageView
        android:layout_gravity="center"
        android:src="@drawable/ic_cast_connected_green_a700_36dp"
        android:layout_width="150dp"
        android:layout_height="150dp"/>
    <TextView
        android:id="@+id/tv_current_version"
        android:padding="10dp"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_update_check"
        android:text="@string/checkUpdate"
        android:padding="10dp"
        android:textSize="18sp"
        android:gravity="center|left"
        android:background="@drawable/recycler_bg"
        android:drawableLeft="@drawable/ic_update_orange_600_36dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_use_help"
        android:text="@string/use_help"
        android:padding="10dp"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:gravity="center|left"
        android:background="@drawable/recycler_bg"
        android:drawableLeft="@drawable/ic_help_amber_a400_36dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <RelativeLayout
        android:id="@+id/rl_webSite"
        android:background="@drawable/recycler_bg"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/website"
            android:padding="10dp"
            android:textSize="18sp"
            android:gravity="center"
            android:drawableLeft="@drawable/ic_cloud_light_blue_700_36dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/web_url"
            android:padding="10dp"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</LinearLayout>
